fixes text alignment issues in dropdowns at smaller breakpoints

--- a/app/assets/stylesheets/buttons_and_forms.scss
+++ b/app/assets/stylesheets/buttons_and_forms.scss
@@ -204,6 +204,7 @@ input[type=submit].delete-button {
   padding: 8px 6px;
   border: 1px solid #e0e0e0;
   font-size: 1em;
+  text-align: left;
   @media only screen and (max-width: $small-screen) {
     font-size: 1.3em;
   }
